<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/black"
            android:text="@string/email"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/banovicbl22_gmail_com"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:contentDescription="@string/copy_my_email"
            android:id="@+id/imageViewCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_content_copy_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/black"
            android:text="@string/facebook"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFacebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/click_here_facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/black"
            android:text="@string/linkedin"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLinkedIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/click_here_facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>